# audio2sub

./: .gitignore  BATCH_PROCESSING_COMPLETE.md  CONCURRENT_BATCH_PROCESSING_FIX.md  DOCKER_OPTIMIZATION_SUMMARY.md  PROJECT_ARCHIVE_SUMMARY.md  README.Docker.md  README.md  REDIS_STATUS_ANALYSIS.md  REDIS_STATUS_FIX_VERIFICATION.md  REDIS_STATUS_LOGIC_FIX.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  说明文档
backend/: .dockerignore  .gitignore  BATCH_PROCESSING_SUCCESS.md  BATCH_UPGRADE_SUMMARY.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.gpu  Dockerfile.gpu-new  Dockerfile.hybrid  Dockerfile.mps  Dockerfile.native  README.md  WHISPER_CPP_MIGRATION_FINAL_REPORT.md  celery_app.py  chinese_transcription_test_20250619_212329.json  chinese_transcription_test_20250619_213350.json  debug_subtitle_test.py  docker-compose.cpu.yml  docker-compose.gpu-new.yml  docker-compose.gpu.yml  docker-compose.hybrid.yml  docker-compose.mps.yml  docker-compose.native.yml  docker_test.py  final_status_report.py  model_test_results_20250619_205158.json  performance_test.sh  pyproject.toml  quick_start.sh  redis.conf  requirements.txt  start_batch.sh  test.py  test_api.py  test_complete_workflow.py  test_subtitle_generation.py  test_whisper.py  test_whisper_audio.py  test_whisper_direct.py
backend/app/: config.py  main.py  models.py  tasks.py  tasks_new.py  tasks_transformers_fallback.py  utils.py  whisper_manager.py  whisper_manager_new.py  whisper_manager_simple.py
backend/docs/: PROJECT_OVERVIEW.md  README.md  batch-processing.md  simple.py  whisper-precision-configuration.md  whisper-subtitle.md
backend/scripts/: README.md  (+2 more)
(+98 files in other folders)
