[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "insanely-fast-whisper>=0.0.15",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
]
