[project]
name = "backend"
version = "0.1.0"
description = "Audio2Sub Backend with whisper.cpp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.34.3",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
]
